Minor changes 3. User settings page created. User is able to change his settings. Project simulation,compile,remove files is only visible to editors. Project simulation area is only visible if there is at least one successfully compiled file. Other minor fixes and changes.

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -387,6 +387,9 @@ font-family:Tahoma, Geneva, sans-serif;
 .space-top-20 {
 	margin-top: 20px;
 }
+.top-5{
+	top: 5px;
+}
 
 .popup{
 	position: fixed;
